--- a/style.css
+++ b/style.css
@@ -442,7 +442,7 @@ button.contact-btn {
     justify-content: center;
     align-items: flex-start;
     flex-basis: 32%;
-    padding: 40px 40px 30px;
+    padding: 20px 40px 20px;
     background-color: var(--bg-clr-one);
     border: 1px solid var(--bg-clr-three);
     border-radius: 5px;
@@ -485,12 +485,17 @@ button.contact-btn {
     color: var(--text-clr);
     line-height: 1.3;
     transition: 0.3s;
+    margin-bottom: 8px;
+}
+.service-box li {
+    color: var(--text-clr);
+    transition: 0.3s;
 }
 
 .service-box h3 {
     font-size: 16px;
     color: var(--links-clr);
-    margin-top: 50px;
+    margin-top: 20px;
 }
 
 .services-container .service-box::after {
@@ -527,7 +532,10 @@ button.contact-btn {
 }
 
 .services-container .service-box:hover.service-box p {
-    color: #aaa;
+    color: #cdcdcd;
+}
+.services-container .service-box:hover.service-box li {
+    color: #bfbfbf;
 }
 
 .services-container .service-box:hover.service-box h3 {
